--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
         .page {
             width: 100%; min-height: 100vh; background-size: cover; background-position: center;
             position: relative; display: flex; flex-direction: column; align-items: center;
-            padding: 120px 20px 80px 20px;
+            padding: 80px 20px 80px 20px; /* Reduced top padding to lift text */
         }
         .headline {
             text-align: center; color: white; font-size: clamp(1.8rem, 5vw, 3.2rem);
             font-weight: bold; text-shadow: 0 4px 10px rgba(0,0,0,0.8); 
-            margin-bottom: auto; z-index: 10;
-            width: 100%; max-width: 1200px; /* Ensures desktop doesn't wrap too early */
+            margin-bottom: 20px; /* Fixed margin to keep text grouped and higher */
+            z-index: 10;
+            width: 100%; max-width: 1200px;
         }
         .body-text {
             color: white; font-size: 1.1rem; line-height: 1.7; text-align: center;
@@ -81,6 +82,14 @@
             border-radius: 20px; backdrop-filter: blur(10px); 
             border: 1px solid rgba(255,255,255,0.15);
             z-index: 10;
+        }
+
+        /* Adjustments for Reels and Contact to keep them centered */
+        .reels-section, #page5 {
+            padding-top: 120px;
+        }
+        .reels-section .headline, #page5 .headline {
+            margin-bottom: auto;
         }
 
         /* --- PAGE 3 SPIDER OVERLAY --- */
@@ -181,7 +190,7 @@
     </section>
 
     <section id="reels" class="page reels-section">
-        <h1 class="headline" style="margin-bottom: 40px;">AI Generated Reels</h1>
+        <h1 class="headline">AI Generated Reels</h1>
         <div class="carousel-wrapper">
             <div class="carousel-track" id="track1">
                 <div class="reel-item"><iframe src="https://www.youtube.com/embed/qMrQIKzTXWM" frameborder="0" allowfullscreen></iframe><div class="reel-label">Conduit Collective Reel</div></div>
@@ -219,7 +228,6 @@
     <script>
         let player; const videoId = 'Cz7llVO6SUY';
         
-        // One-time intro logic
         window.addEventListener('load', () => {
             if (sessionStorage.getItem('introPlayed')) {
                 const overlay = document.getElementById('intro-overlay');
@@ -244,7 +252,7 @@
             const overlay = document.getElementById('intro-overlay');
             overlay.classList.add('intro-hidden');
             document.body.classList.remove('intro-active');
-            sessionStorage.setItem('introPlayed', 'true'); // Save session flag
+            sessionStorage.setItem('introPlayed', 'true');
             setTimeout(() => { overlay.style.display = 'none'; player.pauseVideo(); }, 1200);
         }
 
@@ -252,7 +260,6 @@
             document.getElementById('sub-menu').classList.toggle('expanded');
         }
 
-        // Auto-hide menu on scroll
         window.addEventListener('scroll', () => {
             const subMenu = document.getElementById('sub-menu');
             if (subMenu.classList.contains('expanded')) {
