--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         .intro-btn:hover { background-color: #ffeb64; color: #000; }
         .intro-hidden { opacity: 0; visibility: hidden; pointer-events: none; }
         
-        /* --- DYNAMIC ANIMATED NAVIGATION --- */
+        /* --- NAVIGATION --- */
         .nav-wrapper {
             position: fixed; top: 20px; left: 50%; transform: translateX(-50%);
             z-index: 1000; display: flex; flex-direction: column; align-items: center; gap: 10px;
@@ -60,23 +60,21 @@
             cursor: pointer; transition: 0.3s; box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             white-space: nowrap;
         }
-        /* Active State: Royal Blue Background, Red Text */
         .nav-btn.active { background-color: #4169E1 !important; color: #FF0000 !important; }
 
         /* --- PAGE LAYOUT --- */
         .page {
             width: 100%; min-height: 100vh; background-size: cover; background-position: center;
             position: relative; display: flex; flex-direction: column; align-items: center;
-            padding: 100px 20px 60px 20px; /* Adjusted for better clearance */
+            padding: 100px 20px 40px 20px; 
         }
         .headline {
             text-align: center; color: white; font-size: clamp(1.8rem, 5vw, 3.2rem);
             font-weight: bold; text-shadow: 0 4px 10px rgba(0,0,0,0.8); 
             z-index: 10; width: 100%; max-width: 1200px;
-            margin-bottom: 20px; /* Keeps headline near top */
         }
         .body-text {
-            margin-top: auto; /* Pushes text to the bottom */
+            margin-top: auto; 
             color: white; font-size: 1.1rem; line-height: 1.7; text-align: center;
             max-width: 950px; padding: 30px 50px; 
             background-color: rgba(0, 0, 0, 0.25); 
@@ -85,7 +83,6 @@
             z-index: 10;
         }
 
-        /* Reels/Contact sections stay centered */
         .reels-section, #page5 { padding-top: 140px; justify-content: flex-start; }
         .reels-section .headline, #page5 .headline { margin-bottom: 40px; }
         #page5 { justify-content: center; }
@@ -99,7 +96,7 @@
             pointer-events: none; z-index: 2; opacity: 0.8;
         }
 
-        /* --- REELS CAROUSELS --- */
+        /* --- REELS --- */
         .carousel-wrapper { width: 100%; max-width: 1400px; margin-bottom: 40px; position: relative; z-index: 10; }
         .carousel-track {
             display: flex; flex-wrap: nowrap; overflow-x: auto; gap: 20px; padding: 10px 0;
@@ -117,7 +114,7 @@
         .dot { width: 8px; height: 8px; background: rgba(255,255,255,0.3); border-radius: 50%; transition: 0.3s; }
         .dot.active { background: #ffeb64; transform: scale(1.2); }
 
-        /* --- CONTACT FORM --- */
+        /* --- CONTACT --- */
         .contact-container {
             width: 100%; max-width: 600px; background-color: rgba(0, 0, 0, 0.4); 
             padding: 40px; border-radius: 25px; border: 1px solid rgba(255,255,255,0.2); backdrop-filter: blur(15px);
